--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet" />
         <meta name="description" content="" />
         <link rel="stylesheet" href="./assets/style.css" />
-        <script type="module" src="index.js"></script>
+        <script type="module" src="login.js" defer></script>
     </head>
     <body>
         <header>
@@ -26,6 +26,7 @@
         <main>
             <section id="login">
                 <h2>Log In</h2>
+                <p></p>
                 <form action="#" method="post">
                     <label for="email">E-mail</label>
                     <input type="email" name="email" id="email" />
