--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,7 +10,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
         <meta name="description" content="" />
         <link rel="stylesheet" href="./assets/style.css" />
+        <link rel="stylesheet" href="./assets/modal.css" />
         <script type="module" src="index.js" defer></script>
+        <script type="module" src="modal.js" defer></script>
     </head>
     <body>
         <header>
@@ -60,6 +62,20 @@
                 </form>
             </section>
         </main>
+        <!---- Modal page -->
+        <aside id="modal1" class="modal" aria-hidden="true" role="dialog" aria-labelledby="modalTitle" style="display: none">
+            <div class="modalWrapper">
+                <div class="xClose">
+                    <a href="#"><i class="fa-solid fa-xmark icone"></i></a>
+                </div>
+                <h2 id="modalTitle">Galerie photo</h2>
+                <div class="photoGallery"></div>
+                <div class="modalButtons">
+                    <button class="addModalBtn">Ajouter une photo</button>
+                    <a href="#" class="deleteModalBtn">Supprimer la galerie</a>
+                </div>
+            </div>
+        </aside>
 
         <footer>
             <nav>
