Modal page working and modal.css improved

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -44,7 +44,10 @@
                 </article>
             </section>
             <section id="portfolio">
-                <h2>Mes Projets</h2>
+                <h2>
+                    Mes Projets
+                    <a href="#modal1" class="openModal1"><i class="fa-regular fa-pen-to-square"></i> modifier</a>
+                </h2>
                 <div class="filters"></div>
                 <div class="gallery"></div>
             </section>
