--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -72,10 +72,9 @@
                     <a href="#"><i class="fa-solid fa-xmark icone"></i></a>
                 </div>
                 <h2 id="modalTitle">Galerie photo</h2>
-                <div class="photoGallery"></div>
+                <div class="modalGallery"></div>
                 <div class="modalButtons">
                     <button class="addModalBtn">Ajouter une photo</button>
-                    <a href="#" class="deleteModalBtn">Supprimer la galerie</a>
                 </div>
             </div>
         </aside>
