Added Delete function to the Modal page

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -67,7 +67,7 @@
         </main>
         <!---- Modal page -->
         <aside id="modal1" class="modal" aria-hidden="true" role="dialog" aria-labelledby="modalTitle" style="display: none">
-            <div class="modalWrapper">
+            <div class="modalWrapper modalStop">
                 <div class="xClose">
                     <a href="#"><i class="fa-solid fa-xmark icone"></i></a>
                 </div>
