--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -85,18 +85,19 @@
                         <i class="fa-solid fa-arrow-left"></i>
                         <a href="#"><i class="fa-solid fa-xmark icone"></i></a>
                     </div>
-                    <div class="photoForm">
-                        <h2 class="modalTitle">Ajout photo</h2>
-                        <i class="fa-regular fa-image"></i>
-                        <button class="uploadPhoto">+ Ajouter phone</button>
-                        <p>jpg, png: 4mo max</p>
-                    </div>
+                    <h2 class="modalTitle">Ajout photo</h2>
                     <div class="modalForm">
+                        <div class="photoForm">
+                            <i class="fa-regular fa-image fa-4x"></i>
+                            <button class="uploadPhotoBtn">+ Ajouter photo</button>
+                            <p>jpg, png: 4mo max</p>
+                        </div>
+
                         <form action="#" method="post">
                             <label for="title">Titre</label>
                             <input type="text" name="title" id="title" />
                             <label for="category">Catégorie</label>
-                            <input type="text" name="category" id="category" />
+                            <input type="text" name="category" id="category" /><!----Select, not input-->
                             <input type="submit" value="Envoyer" />
                         </form>
                     </div>
