--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -87,18 +87,21 @@
                     </div>
                     <h2 class="modalTitle">Ajout photo</h2>
                     <div class="modalForm">
-                        <div class="photoForm">
-                            <i class="fa-regular fa-image fa-4x"></i>
-                            <button class="uploadPhotoBtn">+ Ajouter photo</button>
-                            <p>jpg, png: 4mo max</p>
-                        </div>
-
                         <form action="#" method="post">
+                            <div class="photoForm">
+                                <i class="fa-regular fa-image fa-4x"></i>
+                                <label for="file"> <button class="uploadPhotoBtn">+ Ajouter photo</button></label>
+                                <input type="file" id="file" name="file" />
+                                <p>jpg, png: 4mo max</p>
+                            </div>
+
                             <label for="title">Titre</label>
                             <input type="text" name="title" id="title" />
                             <label for="category">Catégorie</label>
-                            <input type="text" name="category" id="category" /><!----Select, not input-->
-                            <input type="submit" value="Envoyer" />
+                            <select name="category" id="category"></select>
+                            <div class="modalSubmit">
+                                <input type="submit" value="Envoyer" disabled />
+                            </div>
                         </form>
                     </div>
                 </div>
