--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -86,24 +86,24 @@
                         <a href="#"><i class="fa-solid fa-xmark icone"></i></a>
                     </div>
                     <h2 class="modalTitle">Ajout photo</h2>
-                    <div class="modalForm">
-                        <form action="#" method="post">
-                            <div class="photoForm">
-                                <i class="fa-regular fa-image fa-4x"></i>
-                                <label for="file"> <button class="uploadPhotoBtn">+ Ajouter photo</button></label>
-                                <input type="file" id="file" name="file" />
-                                <p>jpg, png: 4mo max</p>
-                            </div>
+                    <form class="modalForm" action="#" method="post">
+                        <div class="photoForm">
+                            <i class="fa-regular fa-image fa-4x"></i>
+                            <label for="file" class="uploadPhotoBtn">+ Ajouter photo</label>
+                            <input type="file" id="file" name="file" accept=".jpg, .png" />
+                            <img src="#" alt="Image preview" style="display: none" />
+                            <p>jpg, png: 4mo max</p>
+                            <p class="error" id="error"></p>
+                        </div>
 
-                            <label for="title">Titre</label>
-                            <input type="text" name="title" id="title" />
-                            <label for="category">Catégorie</label>
-                            <select name="category" id="category"></select>
-                            <div class="modalSubmit">
-                                <input type="submit" value="Envoyer" disabled />
-                            </div>
-                        </form>
-                    </div>
+                        <label for="title">Titre</label>
+                        <input type="text" name="title" id="title" />
+                        <label for="category">Catégorie</label>
+                        <select name="category" id="category"></select>
+                        <div class="modalSubmit">
+                            <input type="submit" value="Envoyer" disabled />
+                        </div>
+                    </form>
                 </div>
             </div>
         </aside>
