Added post function to add new works

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -101,7 +101,8 @@
                         <label for="category">Catégorie</label>
                         <select name="category" id="category"></select>
                         <div class="modalSubmit">
-                            <input type="submit" value="Envoyer" disabled />
+                            <input type="submit" value="Envoyer" />
+                            <!--Add disabled-->
                         </div>
                     </form>
                 </div>
