Prevented default refresh of the page and added a pop-up message for the successful loading

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -101,7 +101,7 @@
                         <label for="category">Catégorie</label>
                         <select name="category" id="category"></select>
                         <div class="modalSubmit">
-                            <input type="submit" value="Envoyer" />
+                            <input type="submit" value="Envoyer" disabled />
                             <!--Add disabled-->
                         </div>
                     </form>
