Resolved display works in the modal bug, added images to the database, and created style for title and select inputs when they are invalid.

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -97,9 +97,9 @@
                         </div>
 
                         <label for="title">Titre</label>
-                        <input type="text" name="title" id="title" />
+                        <input type="text" name="title" id="title" required pattern="\S.*" /><!--- This input can't be empty -->
                         <label for="category">Catégorie</label>
-                        <select name="category" id="category"></select>
+                        <select name="category" id="category" required></select>
                         <div class="modalSubmit">
                             <input type="submit" value="Envoyer" disabled />
                         </div>
